--- a/layouts/payment-application.mdx
+++ b/layouts/payment-application.mdx
@@ -19,7 +19,7 @@ category: 'payment'
         <li>
           <button className="text-teal-100 font-medium rounded flex items-center w-full px-4 py-2 bg-teal-800 text-sm focus:outline-none cursor-default" type="button">
             <div className="mr-2 pr-1">
-              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" className="w-5 h-auto stroke-current text-teal-400">
+              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-teal-400">
                 <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
                 <polyline points="9 22 9 12 15 12 15 22" />
               </svg>
@@ -30,7 +30,7 @@ category: 'payment'
         <li>
           <button className="text-teal-100 rounded flex items-center w-full px-4 py-2 text-sm hover:bg-teal-600 hover:text-teal-100 transition-all focus:outline-none active:bg-teal-800" type="button">
             <div className="mr-2 pr-1">
-              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" className="w-5 h-auto stroke-current text-teal-400">
+              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-teal-400">
                 <circle cx="12" cy="12" r="10" />
                 <polyline points="12 6 12 12 16 14" />
               </svg>
@@ -41,7 +41,7 @@ category: 'payment'
         <li>
           <button className="text-teal-100 rounded flex items-center w-full px-4 py-2 text-sm hover:bg-teal-600 hover:text-teal-100 transition-all focus:outline-none active:bg-teal-800" type="button">
             <div className="mr-2 pr-1">
-              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" className="w-5 h-auto stroke-current text-teal-400">
+              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-teal-400">
                 <line x1="19" y1="5" x2="5" y2="19" />
                 <circle cx="6.5" cy="6.5" r="2.5" />
                 <circle cx="17.5" cy="17.5" r="2.5" />
@@ -53,7 +53,7 @@ category: 'payment'
         <li>
           <button className="text-teal-100 rounded flex items-center w-full px-4 py-2 text-sm hover:bg-teal-600 hover:text-teal-100 transition-all focus:outline-none active:bg-teal-800" type="button">
             <div className="mr-2 pr-1">
-              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" className="w-5 h-auto stroke-current text-teal-400">
+              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-teal-400">
                 <rect x="1" y="4" width="22" height="16" rx="2" ry="2" />
                 <line x1="1" y1="10" x2="23" y2="10" />
               </svg>
@@ -64,7 +64,7 @@ category: 'payment'
         <li>
           <button className="text-teal-100 rounded flex items-center w-full px-4 py-2 text-sm hover:bg-teal-600 hover:text-teal-100 transition-all focus:outline-none active:bg-teal-800" type="button">
             <div className="mr-2 pr-1">
-              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" className="w-5 h-auto stroke-current text-teal-400">
+              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-teal-400">
                 <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
                 <circle cx="9" cy="7" r="4" />
                 <path d="M23 21v-2a4 4 0 0 0-3-3.87" />
@@ -77,7 +77,7 @@ category: 'payment'
         <li>
           <button className="text-teal-100 rounded flex items-center w-full px-4 py-2 text-sm hover:bg-teal-600 hover:text-teal-100 transition-all focus:outline-none active:bg-teal-800" type="button">
             <div className="mr-2 pr-1">
-              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" className="w-5 h-auto stroke-current text-teal-400">
+              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-teal-400">
                 <path d="M21.21 15.89A10 10 0 1 1 8 2.83" />
                 <path d="M22 12A10 10 0 0 0 12 2v10z" />
               </svg>
@@ -91,7 +91,7 @@ category: 'payment'
         <li>
           <button className="text-teal-100 rounded flex items-center w-full px-4 py-2 text-sm hover:bg-teal-600 hover:text-teal-100 transition-all focus:outline-none active:bg-teal-800" type="button">
             <div className="mr-2 pr-1">
-              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" className="w-5 h-auto stroke-current text-teal-400">
+              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-teal-400">
                 <circle cx="12" cy="12" r="3" />
                 <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z" />
               </svg>
@@ -102,7 +102,7 @@ category: 'payment'
         <li>
           <button className="text-teal-100 rounded flex items-center w-full px-4 py-2 text-sm hover:bg-teal-600 hover:text-teal-100 transition-all focus:outline-none active:bg-teal-800" type="button">
             <div className="mr-2 pr-1">
-              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" className="w-5 h-auto stroke-current text-teal-400">
+              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-teal-400">
                 <circle cx="12" cy="12" r="10" />
                 <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3" />
                 <line x1="12" y1="17" x2="12.01" y2="17" />
@@ -114,7 +114,7 @@ category: 'payment'
         <li>
           <button className="text-teal-100 rounded flex items-center w-full px-4 py-2 text-sm hover:bg-teal-600 hover:text-teal-100 transition-all focus:outline-none active:bg-teal-800" type="button">
             <div className="mr-2 pr-1">
-              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" className="w-5 h-auto stroke-current text-teal-400">
+              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-teal-400">
                 <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
               </svg>
             </div>
@@ -130,7 +130,7 @@ category: 'payment'
         <div className="container px-20">
           <div className="flex items-center border-b border-gray-200 py-1">
             <div className="flex items-center relative">
-              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" className="w-5 h-auto stroke-current text-gray-400 absolute left-0">
+              <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-gray-400 absolute left-0">
                 <circle cx="11" cy="11" r="8" />
                 <line x1="21" y1="21" x2="16.65" y2="16.65" />
               </svg>
@@ -138,7 +138,7 @@ category: 'payment'
             </div>
             <div className="ml-auto flex items-center space-x-2">
               <button className="text-gray-400 hover:text-gray-500 focus:outline-none" type="button">
-                <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" className="w-5 h-auto stroke-current">
+                <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current">
                   <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9" />
                   <path d="M13.73 21a2 2 0 0 1-3.46 0" />
                 </svg>
@@ -210,7 +210,7 @@ category: 'payment'
             <div className="flex flex-col bg-white rounded shadow">
               <div className="flex flex-1 items-center px-6 pt-4 pb-2">
                 <div className="mr-4">
-                  <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" className="w-5 h-auto stroke-current text-gray-400">
+                  <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-gray-400">
                     <line x1="19" y1="5" x2="5" y2="19" />
                     <circle cx="6.5" cy="6.5" r="2.5" />
                     <circle cx="17.5" cy="17.5" r="2.5" />
@@ -234,7 +234,7 @@ category: 'payment'
             <div className="flex flex-col bg-white rounded shadow">
               <div className="flex flex-1 items-center px-6 pt-4 pb-2">
                 <div className="mr-4">
-                  <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" className="w-5 h-auto stroke-current text-gray-400">
+                  <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-gray-400">
                     <polyline points="1 4 1 10 7 10" />
                     <polyline points="23 20 23 14 17 14" />
                     <path d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15" />
@@ -258,7 +258,7 @@ category: 'payment'
             <div className="flex flex-col bg-white rounded shadow">
               <div className="flex flex-1 items-center px-6 pt-4 pb-2">
                 <div className="mr-4">
-                  <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" className="w-5 h-auto stroke-current text-gray-400">
+                  <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-gray-400">
                     <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14" />
                     <polyline points="22 4 12 14.01 9 11.01" />
                   </svg>
