--- a/layouts/payment-application.mdx
+++ b/layouts/payment-application.mdx
@@ -4,7 +4,7 @@ title: 'Payment application page'
 category: 'payment'
 ---
 
-<div className="w-full flex flex-row bg-cool-gray-100 lg:min-h-screen">
+<div className="w-full flex flex-row bg-gray-100 lg:min-h-screen">
   <aside className="bg-teal-700 hidden fixed inset-0 h-full bg-white z-90 w-full lg:-mb-0 lg:static lg:h-auto lg:overflow-y-visible lg:border-b-0 lg:pt-0 lg:w-1/4 lg:block lg:border-0 xl:w-1/5">
     <div className="pt-6 pb-2 px-4">
       <button className="flex items-center font-bold text-xl text-white focus:outline-none ml-4" type="button">
@@ -146,8 +146,8 @@ category: 'payment'
                   <path d="M13.73 21a2 2 0 0 1-3.46 0" />
                 </svg>
               </button>
-              <button className="flex items-center text-sm rounded hover:bg-cool-gray-100 pl-2 pr-4 py-2 focus:outline-none" type="button">
-                <div className="w-6 h-6 bg-cool-gray-200 rounded-full mr-2">
+              <button className="flex items-center text-sm rounded-md hover:bg-gray-100 px-3 py-2 focus:outline-none" type="button">
+                <div className="w-6 h-6 bg-gray-200 rounded-full mr-2">
                   <img className="rounded-full block w-full h-full object-cover" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=80&h=80&q=100" alt="Profile picture" />
                 </div>
                 <div className="text-sm font-medium">
@@ -164,7 +164,7 @@ category: 'payment'
           <div className="flex flex-row py-6">
             <div className="flex flex-1">
               <div className="flex items-center">
-                <div className="w-12 h-12 rounded-full bg-cool-gray-200 mr-4">
+                <div className="w-12 h-12 rounded-full bg-gray-200 mr-4">
                   <img className="rounded-full block w-full h-full object-cover" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=80&h=80&q=100" alt="Profile picture" />
                 </div>
                 <div className="flex flex-col space-y-1">
@@ -228,7 +228,7 @@ category: 'payment'
                   </div>
                 </div>
               </div>
-              <div className="bg-cool-gray-50 rounded-b px-6 py-2 leading-none text-sm">
+              <div className="bg-gray-50 rounded-b px-6 py-2 leading-none text-sm">
                 <button className="font-medium text-teal-500 my-1" type="button">
                   View all
                 </button>
@@ -252,7 +252,7 @@ category: 'payment'
                   </div>
                 </div>
               </div>
-              <div className="bg-cool-gray-50 rounded-b px-6 py-2 leading-none text-sm">
+              <div className="bg-gray-50 rounded-b px-6 py-2 leading-none text-sm">
                 <button className="font-medium text-teal-500 my-1" type="button">
                   View all
                 </button>
@@ -275,7 +275,7 @@ category: 'payment'
                   </div>
                 </div>
               </div>
-              <div className="bg-cool-gray-50 rounded-b px-6 py-2 leading-none text-sm">
+              <div className="bg-gray-50 rounded-b px-6 py-2 leading-none text-sm">
                 <button className="font-medium text-teal-500 my-1" type="button">
                   View all
                 </button>
