--- a/layouts/payment-application.mdx
+++ b/layouts/payment-application.mdx
@@ -6,7 +6,7 @@ category: 'payment'
 ---
 
 <div className="w-full flex flex-row bg-gray-100 lg:min-h-screen">
-  <aside className="bg-teal-700 hidden fixed inset-0 h-full bg-white z-90 w-full lg:-mb-0 lg:static lg:h-auto lg:overflow-y-visible lg:border-b-0 lg:pt-0 lg:w-1/4 lg:block lg:border-0 xl:w-1/5">
+  <aside className="bg-teal-700 hidden fixed inset-0 h-full bg-white z-90 w-full lg:-mb-0 md:static lg:h-auto lg:overflow-y-visible lg:w-1/4 lg:block xl:w-1/5">
     <div className="pt-6 pb-2 px-4">
       <button className="flex items-center font-bold text-xl text-white focus:outline-none ml-4" type="button">
         <svg className="w-6 h-auto" width="110" height="97" viewBox="0 0 110 97" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -131,7 +131,7 @@ category: 'payment'
   <div className="min-h-screen w-full flex flex-col lg:static lg:max-h-full lg:overflow-visible lg:w-3/4 xl:w-4/5">
     <header className="w-full bg-white shadow">
       <div className="shadow-xs">
-        <div className="container px-20">
+        <div className="container w-full max-w-screen-xl px-4 md:px-10 lg:px-20">
           <div className="flex items-center border-b border-gray-200 py-1">
             <div className="flex items-center relative">
               <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-gray-400 absolute left-0">
@@ -162,17 +162,17 @@ category: 'payment'
               </button>
             </div>
           </div>
-          <div className="flex flex-row py-6">
+          <div className="flex flex-col md:flex-row py-6">
             <div className="flex flex-1">
-              <div className="flex items-center">
-                <div className="w-12 h-12 rounded-full bg-gray-200 mr-4">
+              <div className="flex flex-col sm:flex-row sm:items-center">
+                <div className="w-12 h-12 rounded-full bg-gray-200 mr-4 mb-4 sm:mb-0">
                   <img className="rounded-full block w-full h-full object-cover" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=80&h=80&q=100" alt="Profile picture" />
                 </div>
                 <div className="flex flex-col space-y-1">
-                  <h3 className="font-semibold">
+                  <h3 className="font-semibold text-xl md:text-base">
                     Good morning, Emilia Birch
                   </h3>
-                  <div className="inline-flex items-center text-xs space-x-4 text-gray-500">
+                  <div className="flex flex-col justify-start sm:flex-row sm:items-center text-xs space-y-1 sm:space-y-0 sm:space-x-4 text-gray-500">
                     <div className="inline-flex items-center">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" className="w-3 h-auto fill-current text-gray-400 mr-2" fill="currentColor">
                         <path fillRule="evenodd" d="M14.763.075A.5.5 0 0115 .5v15a.5.5 0 01-.5.5h-3a.5.5 0 01-.5-.5V14h-1v1.5a.5.5 0 01-.5.5h-9a.5.5 0 01-.5-.5V10a.5.5 0 01.342-.474L6 7.64V4.5a.5.5 0 01.276-.447l8-4a.5.5 0 01.487.022zM6 8.694L1 10.36V15h5V8.694zM7 15h2v-1.5a.5.5 0 01.5-.5h2a.5.5 0 01.5.5V15h2V1.309l-7 3.5V15z" />
@@ -190,12 +190,12 @@ category: 'payment'
                 </div>
               </div>
             </div>
-            <div className="flex">
-              <div className="flex items-center space-x-4">
-                <button className="bg-white text-gray-800 border border-gray-200 font-medium text-sm rounded px-4 py-2 focus:outline-none focus:shadow-outline-gray hover:border-gray-300 active:border-gray-400" type="button">
+            <div className="pt-6 md:pt-0">
+              <div className="flex flex-col sm:flex-row sm:items-center space-y-4 sm:space-y-0 sm:space-x-4">
+                <button className="sm:w-auto bg-white text-gray-800 border border-gray-200 font-medium text-base sm:text-sm rounded px-6 py-3 sm:px-4 sm:py-2 focus:outline-none focus:shadow-outline-gray hover:border-gray-300 active:border-gray-400 wrap" type="button">
                   Add money
                 </button>
-                <button className="bg-teal-600 text-white border border-transparent font-medium text-sm rounded px-4 py-2 hover:bg-teal-500 focus:outline-none focus:shadow-outline-teal active:bg-teal-700" type="button">
+                <button className="sm:w-auto bg-teal-600 text-white border border-transparent font-medium text-base sm:text-sm rounded px-6 py-3 sm:px-4 sm:py-2 hover:bg-teal-500 focus:outline-none focus:shadow-outline-teal active:bg-teal-700" type="button">
                   Send money
                 </button>
               </div>
@@ -204,90 +204,184 @@ category: 'payment'
         </div>
       </div>
     </header>
-    <div className="w-full flex-1 px-20">
-      <div className="space-y-6 py-10">
-        <div className="flex flex-col">
-          <h4 className="text-base font-medium mb-2">
-            Overview
-          </h4>
-          <div className="grid grid-cols-1 lg:grid-cols-3 gap-6 w-full">
-            <div className="flex flex-col bg-white rounded shadow">
-              <div className="flex flex-1 items-center px-6 pt-4 pb-2">
-                <div className="mr-4">
-                  <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-gray-400">
-                    <line x1="19" y1="5" x2="5" y2="19" />
-                    <circle cx="6.5" cy="6.5" r="2.5" />
-                    <circle cx="17.5" cy="17.5" r="2.5" />
-                  </svg>
-                </div>
-                <div className="flex-1">
-                  <small className="text-gray-500 text-xs block mb-px">
-                    Account balance
-                  </small>
-                  <div className="font-medium">
-                    $30,659.45
+    <div className="w-full flex-1">
+      <div className="container w-full max-w-screen-xl px-5 md:px-10 lg:px-20">
+        <div className="space-y-6 py-6 lg:py-10">
+          <div className="flex flex-col">
+            <h4 className="text-lg sm:text-base font-medium mb-4 sm:mb-2">
+              Overview
+            </h4>
+            <div className="grid grid-cols-1 md:grid-cols-3 gap-6 w-full">
+              <div className="flex flex-col bg-white rounded shadow">
+                <div className="flex flex-1 items-center px-6 pt-4 pb-2">
+                  <div className="mr-4">
+                    <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-gray-400">
+                      <line x1="19" y1="5" x2="5" y2="19" />
+                      <circle cx="6.5" cy="6.5" r="2.5" />
+                      <circle cx="17.5" cy="17.5" r="2.5" />
+                    </svg>
+                  </div>
+                  <div className="flex-1">
+                    <small className="text-gray-500 text-xs block mb-px">
+                      Account balance
+                    </small>
+                    <div className="font-medium">
+                      $30,659.45
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div className="bg-gray-50 rounded-b px-6 py-2 leading-none text-sm">
-                <button className="font-medium text-teal-500 my-1" type="button">
-                  View all
-                </button>
-              </div>
-            </div>
-            <div className="flex flex-col bg-white rounded shadow">
-              <div className="flex flex-1 items-center px-6 pt-4 pb-2">
-                <div className="mr-4">
-                  <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-gray-400">
-                    <polyline points="1 4 1 10 7 10" />
-                    <polyline points="23 20 23 14 17 14" />
-                    <path d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15" />
-                  </svg>
+                <div className="bg-gray-50 rounded-b px-6 py-2 leading-none text-sm">
+                  <button className="font-medium text-teal-500 my-1" type="button">
+                    View all
+                  </button>
                 </div>
-                <div className="flex-1">
-                  <small className="text-gray-500 text-xs block mb-px">
-                    Pending
-                  </small>
-                  <div className="font-medium">
-                    -$19,500.00
+              </div>
+              <div className="flex flex-col bg-white rounded shadow">
+                <div className="flex flex-1 items-center px-6 pt-4 pb-2">
+                  <div className="mr-4">
+                    <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-gray-400">
+                      <polyline points="1 4 1 10 7 10" />
+                      <polyline points="23 20 23 14 17 14" />
+                      <path d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15" />
+                    </svg>
+                  </div>
+                  <div className="flex-1">
+                    <small className="text-gray-500 text-xs block mb-px">
+                      Pending
+                    </small>
+                    <div className="font-medium">
+                      -$19,500.00
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div className="bg-gray-50 rounded-b px-6 py-2 leading-none text-sm">
-                <button className="font-medium text-teal-500 my-1" type="button">
-                  View all
-                </button>
-              </div>
-            </div>
-            <div className="flex flex-col bg-white rounded shadow">
-              <div className="flex flex-1 items-center px-6 pt-4 pb-2">
-                <div className="mr-4">
-                  <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-gray-400">
-                    <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14" />
-                    <polyline points="22 4 12 14.01 9 11.01" />
-                  </svg>
+                <div className="bg-gray-50 rounded-b px-6 py-2 leading-none text-sm">
+                  <button className="font-medium text-teal-500 my-1" type="button">
+                    View all
+                  </button>
                 </div>
-                <div className="flex-1">
-                  <small className="text-gray-500 text-xs block mb-px">
-                    Processed (Last 30 days)
-                  </small>
-                  <div className="font-medium">
-                    -$28,750.00
+              </div>
+              <div className="flex flex-col bg-white rounded shadow">
+                <div className="flex flex-1 items-center px-6 pt-4 pb-2">
+                  <div className="mr-4">
+                    <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" strokeLinecap="round" strokeLinejoin="round" className="w-5 h-auto stroke-current text-gray-400">
+                      <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14" />
+                      <polyline points="22 4 12 14.01 9 11.01" />
+                    </svg>
+                  </div>
+                  <div className="flex-1">
+                    <small className="text-gray-500 text-xs block mb-px">
+                      Processed (Last 30 days)
+                    </small>
+                    <div className="font-medium">
+                      -$28,750.00
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div className="bg-gray-50 rounded-b px-6 py-2 leading-none text-sm">
-                <button className="font-medium text-teal-500 my-1" type="button">
-                  View all
-                </button>
+                <div className="bg-gray-50 rounded-b px-6 py-2 leading-none text-sm">
+                  <button className="font-medium text-teal-500 my-1" type="button">
+                    View all
+                  </button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div className="flex flex-col">
-          <h4 className="text-base font-medium">
-            Recent activity
-          </h4>
+          <div className="flex flex-col">
+            <h4 className="text-base font-medium mb-2">
+              Recent activity
+            </h4>
+            <div className="text-left rounded overflow-hidden shadow bg-white text-sm w-full">
+              <table className="min-w-full border-collapse text-gray-500">
+                <thead>
+                  <tr>
+                    <th className="uppercase font-medium text-gray-500 text-xs tracking-wider bg-gray-50 px-5 py-3 text-left whitespace-normal leading-normal border-b border-gray-200">
+                      Transaction
+                    </th>
+                    <th className="uppercase font-medium text-gray-500 text-xs tracking-wider bg-gray-50 px-5 py-3 text-left whitespace-normal leading-normal border-b border-gray-200">
+                      Amount
+                    </th>
+                    <th className="uppercase font-medium text-gray-500 text-xs tracking-wider bg-gray-50 px-5 py-3 text-left whitespace-normal leading-normal border-b border-gray-200">
+                      Status
+                    </th>
+                    <th className="uppercase font-medium text-gray-500 text-xs tracking-wider bg-gray-50 px-5 py-3 text-left whitespace-normal leading-normal border-b border-gray-200">
+                      Date
+                    </th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td className="px-5 py-4 text-left border-b border-gray-200">
+                      Payment from Molly Sanders
+                    </td>
+                    <td className="px-5 py-4 text-left border-b border-gray-200">
+                      <div className="inline-flex items-center text-gray-800">
+                        $20,000&nbsp;<em className="not-italic text-gray-400">USD</em>
+                      </div>
+                    </td>
+                    <td className="px-5 py-4 text-left border-b border-gray-200">
+                      <div className="inline-flex items-center bg-green-100 text-green-600 font-medium rounded-full px-2 py-1 leading-none">
+                        Success
+                      </div>
+                    </td>
+                    <td className="px-5 py-4 text-left border-b border-gray-200">
+                      May 5, 2020
+                    </td>
+                  </tr>
+                  <tr>
+                    <td className="px-5 py-4 text-left border-b border-gray-200">
+                      <div className="flex items-center">
+                        <div className="w-7">
+                          <svg className="w-4 h-auto fill-current text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor">
+                            <path fillRule="evenodd" d="M10.146 7.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 11l-2.647-2.646a.5.5 0 010-.708z" />
+                            <path fillRule="evenodd" d="M2 11a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 11zm3.854-9.354a.5.5 0 010 .708L3.207 5l2.647 2.646a.5.5 0 11-.708.708l-3-3a.5.5 0 010-.708l3-3a.5.5 0 01.708 0z" />
+                            <path fillRule="evenodd" d="M2.5 5a.5.5 0 01.5-.5h10.5a.5.5 0 010 1H3a.5.5 0 01-.5-.5z" />
+                          </svg>
+                        </div>
+                        Payment from Doug Mann
+                      </div>
+                    </td>
+                    <td className="px-5 py-4 text-left border-b border-gray-200">
+                      <div className="inline-flex items-center text-gray-800">
+                        $19,500&nbsp;<em className="not-italic text-gray-400">USD</em>
+                      </div>
+                    </td>
+                    <td className="px-5 py-4 text-left border-b border-gray-200">
+                      <div className="inline-flex items-center bg-yellow-100 text-yellow-600 font-medium rounded-full px-2 py-1 leading-none">
+                        Processing
+                      </div>
+                    </td>
+                    <td className="px-5 py-4 text-left border-b border-gray-200">
+                      April 28, 2020
+                    </td>
+                  </tr>
+                  <tr>
+                    <td className="px-5 py-4 text-left">
+                      <div className="flex items-center">
+                        <div className="w-7">
+                          <svg className="w-4 h-auto fill-current text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor">
+                            <path fill-rule="evenodd" d="M16 8A8 8 0 110 8a8 8 0 0116 0zM8.5 4a.5.5 0 00-1 0v3.5H4a.5.5 0 000 1h3.5V12a.5.5 0 001 0V8.5H12a.5.5 0 000-1H8.5V4z" />
+                          </svg>
+                        </div>
+                        Added from account •••• 5555
+                      </div>
+                    </td>
+                    <td className="px-5 py-4 text-left">
+                      <div className="inline-flex items-center text-gray-800">
+                        $300&nbsp;<em className="not-italic text-gray-400">USD</em>
+                      </div>
+                    </td>
+                    <td className="px-5 py-4 text-left">
+                      <div className="inline-flex items-center bg-gray-100 text-gray-700 font-medium rounded-full px-2 py-1 leading-none">
+                        Failed
+                      </div>
+                    </td>
+                    <td className="px-5 py-4 text-left">
+                      March 15, 2020
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
       </div>
     </div>
