Updates hosting platform layout

--- a/layouts/hosting-platform.mdx
+++ b/layouts/hosting-platform.mdx
@@ -7,7 +7,7 @@ category: 'hosting'
 
 <div className="w-full flex flex-col bg-white lg:min-h-screen">
   <header className="bg-indigo-800">
-    <div className="px-10 lg:px-16">
+    <div className="px-4 lg:px-10">
       <div className="flex py-4">
         <div className="w-1/4 lg:w-1/5">
           <svg className="w-6 h-auto" width="110" height="97" viewBox="0 0 110 97" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -21,7 +21,7 @@ category: 'hosting'
     </div>
   </header>
   <div className="flex flex-1 bg-white">
-    <div className="w-1/4 lg:w-1/5 pl-10 lg:pl-16 lg:pr-6">
+    <div className="lg:w-1/5 pl-4 lg:pl-10 lg:pr-6">
       <div className="py-4">
         <button className="flex items-center py-2 focus:outline-none" type="button">
           <div className="w-8 h-8 bg-gray-200 rounded-full mr-2">
@@ -58,7 +58,459 @@ category: 'hosting'
         </li>
       </ul>
     </div>
-    <div className="border-l border-r border-gray-200 w-2/4 lg:w-3/5" />
-    <div className="bg-gray-100 w-1/4 lg:w-1/5" />
+    <div className="flex flex-col flex-1 min-h-full border-l border-r border-gray-200">
+      <div className="flex items-center border-b border-gray-200 py-4 lg:p-5">
+        <div className="flex-1">
+          <h2 className="font-medium">
+            Projects
+          </h2>
+        </div>
+        <div className="flex items-center">
+          <button className="inline-flex items-center rounded-md border border-gray-300 px-4 py-2 text-sm leading-none focus:outline-none" type="button">
+            Sort
+          </button>
+        </div>
+      </div>
+      <div className="flex-1">
+        <div className="flex flex-col border-b border-gray-200 p-4 lg:p-5">
+          <div className="flex flex-col lg:flex-row lg:items-center">
+            <div className="flex items-center flex-1">
+              <div className="w-6 flex pl-1">
+                <span className="block w-2 h-2 bg-green-400 shadow-outline-green rounded-full" />
+              </div>
+              <h3 className="text-sm font-medium">
+                Workcation
+              </h3>
+            </div>
+            <div className="flex items-center space-x-4">
+              <button className="font-medium text-xs" type="button">
+                Visit site
+              </button>
+              <button className="text-yellow-300 focus:outline-none" type="button">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" className="w-3 h-auto fill-current" fill="currentColor">
+                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div className="pt-2 text-xs flex items-center text-gray-500">
+            <div className="flex items-center flex-1 space-x-1">
+              <div className="mr-1 text-gray-400">
+                <svg className="w-4 h-auto fill-current" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
+                </svg>
+              </div>
+              <div>
+                debbielewis/workcation
+              </div>
+            </div>
+            <div className="flex items-center">
+              <div className="flex items-center">
+                <div className="text-gray-400 mr-2">
+                  <svg className="w-4 h-auto fill-current" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M23.644 5.43c.009.032.014.065.014.099v5.15c0 .135-.073.26-.189.326l-4.323 2.49v4.934c0 .135-.072.258-.188.326L9.931 23.95c-.021.012-.043.02-.066.027-.008.002-.016.008-.024.01-.063.018-.13.018-.192 0-.011-.002-.02-.008-.029-.012-.021-.008-.043-.014-.063-.025L.534 18.755c-.117-.068-.189-.191-.189-.326V2.974c0-.033.005-.066.014-.098.003-.012.01-.021.014-.032.006-.02.014-.04.023-.058.004-.013.015-.022.023-.033.012-.016.021-.031.033-.045.012-.01.025-.018.037-.027.014-.012.027-.024.041-.034h.001L5.044.05c.115-.067.259-.067.375 0l4.512 2.597h.002c.015.01.027.021.041.033.012.009.025.018.037.027.013.014.021.029.033.045.008.011.02.021.025.033.011.019.017.038.024.058.003.011.011.021.013.032.01.031.014.064.014.098v9.652l3.76-2.164V5.527c0-.033.005-.066.014-.098.003-.011.009-.021.013-.032.007-.02.014-.039.024-.059.007-.012.018-.021.025-.033.012-.015.021-.03.033-.043.012-.012.025-.02.037-.028.014-.011.026-.023.041-.032h.001l4.513-2.598c.116-.067.259-.067.375 0l4.513 2.598c.016.01.027.021.042.031.012.01.025.018.036.028.013.014.022.029.034.044.008.012.019.021.024.033.011.02.018.039.024.059.006.011.012.022.015.033zm-.74 5.032V6.179l-1.578.908-2.182 1.256v4.283l3.76-2.164zm-4.511 7.75v-4.287l-2.146 1.225-6.127 3.498v4.326l8.273-4.762zM1.095 3.624v14.588l8.273 4.762v-4.326l-4.322-2.445-.002-.003h-.002c-.014-.01-.025-.021-.04-.031-.011-.01-.024-.018-.035-.027l-.001-.002c-.013-.012-.021-.025-.031-.039-.01-.012-.021-.023-.028-.037h-.002c-.008-.014-.013-.031-.02-.047-.006-.016-.014-.027-.018-.043-.004-.018-.006-.037-.008-.057-.002-.014-.006-.027-.006-.041V5.789l-2.18-1.257-1.578-.908zM5.231.81l-3.76 2.164 3.76 2.164 3.758-2.164L5.231.81zm1.956 13.505l2.182-1.256V3.624l-1.58.909-2.182 1.256v9.435l1.58-.909zM18.769 3.364l-3.76 2.164 3.76 2.163 3.759-2.164-3.759-2.163zm-.376 4.979l-2.182-1.256-1.579-.908v4.283l2.182 1.256 1.579.908V8.343zm-8.65 9.654l5.514-3.148 2.756-1.572-3.757-2.163-4.324 2.489-3.941 2.27 3.752 2.124z" />
+                  </svg>
+                </div>
+                Laravel
+              </div>
+              <span className="block mx-2">•</span>
+              Last deploy 3h ago
+              <span className="block mx-2">•</span>
+              United States
+            </div>
+          </div>
+        </div>
+        <div className="flex flex-col border-b border-gray-200 p-4 lg:p-5">
+          <div className="flex flex-col lg:flex-row lg:items-center">
+            <div className="flex items-center flex-1">
+              <div className="w-6 flex pl-1">
+                <span className="block w-2 h-2 bg-green-400 shadow-outline-green rounded-full" />
+              </div>
+              <h3 className="text-sm font-medium">
+                Tailwind CSS
+              </h3>
+            </div>
+            <div className="flex items-center space-x-4">
+              <button className="font-medium text-xs" type="button">
+                Visit site
+              </button>
+              <button className="text-gray-300 hover:text-gray-400 focus:outline-none" type="button">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" className="w-3 h-auto fill-current" fill="currentColor">
+                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div className="pt-2 text-xs flex items-center text-gray-500">
+            <div className="flex items-center flex-1 space-x-1">
+              <div className="mr-1 text-gray-400">
+                <svg className="w-4 h-auto fill-current" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
+                </svg>
+              </div>
+              <div>
+                debbielewis/tailwindcss
+              </div>
+            </div>
+            <div className="flex items-center">
+              <div className="flex items-center">
+                <div className="text-gray-400 mr-2">
+                  <svg className="w-4 h-auto fill-current" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M17.813 22.502c-.089.047-.084.066.005.021a.228.228 0 0 0 .07-.047c0-.016-.002-.014-.075.026zm.178-.094c-.042.033-.042.035.009.009.028-.014.052-.03.052-.035 0-.019-.012-.014-.061.026zm.117-.071c-.042.033-.042.035.009.009.028-.014.052-.03.052-.035 0-.019-.012-.014-.061.026zm.117-.07c-.042.033-.042.035.009.009.028-.014.052-.03.052-.035 0-.019-.012-.014-.061.026zm.162-.105c-.082.052-.108.087-.035.047.052-.03.136-.094.122-.096a.466.466 0 0 0-.087.049zM11.214.006c-.052.005-.216.021-.364.033-3.408.307-6.601 2.146-8.623 4.973a11.876 11.876 0 0 0-2.118 5.243c-.096.659-.108.854-.108 1.748s.012 1.088.108 1.748c.652 4.506 3.859 8.292 8.208 9.695.779.251 1.6.422 2.533.525.364.04 1.935.04 2.299 0 1.611-.178 2.977-.577 4.323-1.264.206-.106.246-.134.218-.157a231.73 231.73 0 0 1-1.954-2.62l-1.919-2.592-2.404-3.558a332.01 332.01 0 0 0-2.421-3.556c-.009-.002-.019 1.579-.023 3.509-.007 3.38-.009 3.516-.052 3.596a.424.424 0 0 1-.206.213c-.075.038-.141.045-.495.045H7.81l-.108-.068a.442.442 0 0 1-.157-.171l-.049-.106.005-4.703.007-4.705.073-.091a.637.637 0 0 1 .174-.143c.096-.047.134-.052.54-.052.479 0 .558.019.683.155a466.83 466.83 0 0 1 2.895 4.361c1.558 2.362 3.687 5.587 4.734 7.171l1.9 2.878.096-.063a12.34 12.34 0 0 0 2.465-2.163 11.94 11.94 0 0 0 2.824-6.134c.096-.659.108-.854.108-1.748s-.012-1.088-.108-1.748c-.652-4.506-3.859-8.292-8.208-9.695a12.552 12.552 0 0 0-2.498-.523c-.225-.023-1.776-.049-1.97-.03zm4.912 7.258a.471.471 0 0 1 .237.277c.019.061.023 1.365.019 4.304l-.007 4.218-.744-1.14-.746-1.14v-3.066c0-1.982.009-3.096.023-3.15a.484.484 0 0 1 .232-.296c.096-.049.131-.054.5-.054.347 0 .408.005.486.047z" />
+                  </svg>
+                </div>
+                Next.js
+              </div>
+              <span className="block mx-2">•</span>
+              Last deploy 6h ago
+              <span className="block mx-2">•</span>
+              Canada
+            </div>
+          </div>
+        </div>
+        <div className="flex flex-col border-b border-gray-200 p-4 lg:p-5">
+          <div className="flex flex-col lg:flex-row lg:items-center">
+            <div className="flex items-center flex-1">
+              <div className="w-6 flex pl-1">
+                <span className="block w-2 h-2 bg-green-400 shadow-outline-green rounded-full" />
+              </div>
+              <h3 className="text-sm font-medium">
+                Kitetail
+              </h3>
+            </div>
+            <div className="flex items-center space-x-4">
+              <button className="font-medium text-xs" type="button">
+                Visit site
+              </button>
+              <button className="text-gray-300 focus:outline-none" type="button">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" className="w-3 h-auto fill-current" fill="currentColor">
+                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div className="pt-2 text-xs flex items-center text-gray-500">
+            <div className="flex items-center flex-1 space-x-1">
+              <div className="mr-1 text-gray-400">
+                <svg className="w-4 h-auto fill-current" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
+                </svg>
+              </div>
+              <div>
+                debbielewis/kitetail
+              </div>
+            </div>
+            <div className="flex items-center">
+              <div className="flex items-center">
+                <div className="text-gray-400 mr-2">
+                  <svg className="w-4 h-auto fill-current" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M23.644 5.43c.009.032.014.065.014.099v5.15c0 .135-.073.26-.189.326l-4.323 2.49v4.934c0 .135-.072.258-.188.326L9.931 23.95c-.021.012-.043.02-.066.027-.008.002-.016.008-.024.01-.063.018-.13.018-.192 0-.011-.002-.02-.008-.029-.012-.021-.008-.043-.014-.063-.025L.534 18.755c-.117-.068-.189-.191-.189-.326V2.974c0-.033.005-.066.014-.098.003-.012.01-.021.014-.032.006-.02.014-.04.023-.058.004-.013.015-.022.023-.033.012-.016.021-.031.033-.045.012-.01.025-.018.037-.027.014-.012.027-.024.041-.034h.001L5.044.05c.115-.067.259-.067.375 0l4.512 2.597h.002c.015.01.027.021.041.033.012.009.025.018.037.027.013.014.021.029.033.045.008.011.02.021.025.033.011.019.017.038.024.058.003.011.011.021.013.032.01.031.014.064.014.098v9.652l3.76-2.164V5.527c0-.033.005-.066.014-.098.003-.011.009-.021.013-.032.007-.02.014-.039.024-.059.007-.012.018-.021.025-.033.012-.015.021-.03.033-.043.012-.012.025-.02.037-.028.014-.011.026-.023.041-.032h.001l4.513-2.598c.116-.067.259-.067.375 0l4.513 2.598c.016.01.027.021.042.031.012.01.025.018.036.028.013.014.022.029.034.044.008.012.019.021.024.033.011.02.018.039.024.059.006.011.012.022.015.033zm-.74 5.032V6.179l-1.578.908-2.182 1.256v4.283l3.76-2.164zm-4.511 7.75v-4.287l-2.146 1.225-6.127 3.498v4.326l8.273-4.762zM1.095 3.624v14.588l8.273 4.762v-4.326l-4.322-2.445-.002-.003h-.002c-.014-.01-.025-.021-.04-.031-.011-.01-.024-.018-.035-.027l-.001-.002c-.013-.012-.021-.025-.031-.039-.01-.012-.021-.023-.028-.037h-.002c-.008-.014-.013-.031-.02-.047-.006-.016-.014-.027-.018-.043-.004-.018-.006-.037-.008-.057-.002-.014-.006-.027-.006-.041V5.789l-2.18-1.257-1.578-.908zM5.231.81l-3.76 2.164 3.76 2.164 3.758-2.164L5.231.81zm1.956 13.505l2.182-1.256V3.624l-1.58.909-2.182 1.256v9.435l1.58-.909zM18.769 3.364l-3.76 2.164 3.76 2.163 3.759-2.164-3.759-2.163zm-.376 4.979l-2.182-1.256-1.579-.908v4.283l2.182 1.256 1.579.908V8.343zm-8.65 9.654l5.514-3.148 2.756-1.572-3.757-2.163-4.324 2.489-3.941 2.27 3.752 2.124z" />
+                  </svg>
+                </div>
+                Laravel
+              </div>
+              <span className="block mx-2">•</span>
+              Last deploy 1d ago
+              <span className="block mx-2">•</span>
+              United States
+            </div>
+          </div>
+        </div>
+        <div className="flex flex-col border-b border-gray-200 p-4 lg:p-5">
+          <div className="flex flex-col lg:flex-row lg:items-center">
+            <div className="flex items-center flex-1">
+              <div className="w-6 flex pl-1">
+                <span className="block w-2 h-2 bg-gray-400 shadow-outline-gray rounded-full" />
+              </div>
+              <h3 className="text-sm font-medium">
+                Refactoring UI
+              </h3>
+            </div>
+            <div className="flex items-center space-x-4">
+              <button className="font-medium text-xs" type="button">
+                Visit site
+              </button>
+              <button className="text-gray-300 focus:outline-none" type="button">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" className="w-3 h-auto fill-current" fill="currentColor">
+                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div className="pt-2 text-xs flex items-center text-gray-500">
+            <div className="flex items-center flex-1 space-x-1">
+              <div className="mr-1 text-gray-400">
+                <svg className="w-4 h-auto fill-current" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
+                </svg>
+              </div>
+              <div>
+                debbielewis/refactoringui
+              </div>
+            </div>
+            <div className="flex items-center">
+              <div className="flex items-center">
+                <div className="text-gray-400 mr-2">
+                  <svg className="w-4 h-auto fill-current" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M23.644 5.43c.009.032.014.065.014.099v5.15c0 .135-.073.26-.189.326l-4.323 2.49v4.934c0 .135-.072.258-.188.326L9.931 23.95c-.021.012-.043.02-.066.027-.008.002-.016.008-.024.01-.063.018-.13.018-.192 0-.011-.002-.02-.008-.029-.012-.021-.008-.043-.014-.063-.025L.534 18.755c-.117-.068-.189-.191-.189-.326V2.974c0-.033.005-.066.014-.098.003-.012.01-.021.014-.032.006-.02.014-.04.023-.058.004-.013.015-.022.023-.033.012-.016.021-.031.033-.045.012-.01.025-.018.037-.027.014-.012.027-.024.041-.034h.001L5.044.05c.115-.067.259-.067.375 0l4.512 2.597h.002c.015.01.027.021.041.033.012.009.025.018.037.027.013.014.021.029.033.045.008.011.02.021.025.033.011.019.017.038.024.058.003.011.011.021.013.032.01.031.014.064.014.098v9.652l3.76-2.164V5.527c0-.033.005-.066.014-.098.003-.011.009-.021.013-.032.007-.02.014-.039.024-.059.007-.012.018-.021.025-.033.012-.015.021-.03.033-.043.012-.012.025-.02.037-.028.014-.011.026-.023.041-.032h.001l4.513-2.598c.116-.067.259-.067.375 0l4.513 2.598c.016.01.027.021.042.031.012.01.025.018.036.028.013.014.022.029.034.044.008.012.019.021.024.033.011.02.018.039.024.059.006.011.012.022.015.033zm-.74 5.032V6.179l-1.578.908-2.182 1.256v4.283l3.76-2.164zm-4.511 7.75v-4.287l-2.146 1.225-6.127 3.498v4.326l8.273-4.762zM1.095 3.624v14.588l8.273 4.762v-4.326l-4.322-2.445-.002-.003h-.002c-.014-.01-.025-.021-.04-.031-.011-.01-.024-.018-.035-.027l-.001-.002c-.013-.012-.021-.025-.031-.039-.01-.012-.021-.023-.028-.037h-.002c-.008-.014-.013-.031-.02-.047-.006-.016-.014-.027-.018-.043-.004-.018-.006-.037-.008-.057-.002-.014-.006-.027-.006-.041V5.789l-2.18-1.257-1.578-.908zM5.231.81l-3.76 2.164 3.76 2.164 3.758-2.164L5.231.81zm1.956 13.505l2.182-1.256V3.624l-1.58.909-2.182 1.256v9.435l1.58-.909zM18.769 3.364l-3.76 2.164 3.76 2.163 3.759-2.164-3.759-2.163zm-.376 4.979l-2.182-1.256-1.579-.908v4.283l2.182 1.256 1.579.908V8.343zm-8.65 9.654l5.514-3.148 2.756-1.572-3.757-2.163-4.324 2.489-3.941 2.27 3.752 2.124z" />
+                  </svg>
+                </div>
+                Laravel
+              </div>
+              <span className="block mx-2">•</span>
+              Last deploy 1d ago
+              <span className="block mx-2">•</span>
+              United States
+            </div>
+          </div>
+        </div>
+        <div className="flex flex-col border-b border-gray-200 p-4 lg:p-5">
+          <div className="flex flex-col lg:flex-row lg:items-center">
+            <div className="flex items-center flex-1">
+              <div className="w-6 flex pl-1">
+                <span className="block w-2 h-2 bg-gray-400 shadow-outline-gray rounded-full" />
+              </div>
+              <h3 className="text-sm font-medium">
+                Hero Patterns
+              </h3>
+            </div>
+            <div className="flex items-center space-x-4">
+              <button className="font-medium text-xs" type="button">
+                Visit site
+              </button>
+              <button className="text-gray-300 focus:outline-none" type="button">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" className="w-3 h-auto fill-current" fill="currentColor">
+                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div className="pt-2 text-xs flex items-center text-gray-500">
+            <div className="flex items-center flex-1 space-x-1">
+              <div className="mr-1 text-gray-400">
+                <svg className="w-4 h-auto fill-current" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
+                </svg>
+              </div>
+              <div>
+                debbielewis/heropatterns
+              </div>
+            </div>
+            <div className="flex items-center">
+              <div className="flex items-center">
+                <div className="text-gray-400 mr-2">
+                  <svg className="w-4 h-auto fill-current" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M23.644 5.43c.009.032.014.065.014.099v5.15c0 .135-.073.26-.189.326l-4.323 2.49v4.934c0 .135-.072.258-.188.326L9.931 23.95c-.021.012-.043.02-.066.027-.008.002-.016.008-.024.01-.063.018-.13.018-.192 0-.011-.002-.02-.008-.029-.012-.021-.008-.043-.014-.063-.025L.534 18.755c-.117-.068-.189-.191-.189-.326V2.974c0-.033.005-.066.014-.098.003-.012.01-.021.014-.032.006-.02.014-.04.023-.058.004-.013.015-.022.023-.033.012-.016.021-.031.033-.045.012-.01.025-.018.037-.027.014-.012.027-.024.041-.034h.001L5.044.05c.115-.067.259-.067.375 0l4.512 2.597h.002c.015.01.027.021.041.033.012.009.025.018.037.027.013.014.021.029.033.045.008.011.02.021.025.033.011.019.017.038.024.058.003.011.011.021.013.032.01.031.014.064.014.098v9.652l3.76-2.164V5.527c0-.033.005-.066.014-.098.003-.011.009-.021.013-.032.007-.02.014-.039.024-.059.007-.012.018-.021.025-.033.012-.015.021-.03.033-.043.012-.012.025-.02.037-.028.014-.011.026-.023.041-.032h.001l4.513-2.598c.116-.067.259-.067.375 0l4.513 2.598c.016.01.027.021.042.031.012.01.025.018.036.028.013.014.022.029.034.044.008.012.019.021.024.033.011.02.018.039.024.059.006.011.012.022.015.033zm-.74 5.032V6.179l-1.578.908-2.182 1.256v4.283l3.76-2.164zm-4.511 7.75v-4.287l-2.146 1.225-6.127 3.498v4.326l8.273-4.762zM1.095 3.624v14.588l8.273 4.762v-4.326l-4.322-2.445-.002-.003h-.002c-.014-.01-.025-.021-.04-.031-.011-.01-.024-.018-.035-.027l-.001-.002c-.013-.012-.021-.025-.031-.039-.01-.012-.021-.023-.028-.037h-.002c-.008-.014-.013-.031-.02-.047-.006-.016-.014-.027-.018-.043-.004-.018-.006-.037-.008-.057-.002-.014-.006-.027-.006-.041V5.789l-2.18-1.257-1.578-.908zM5.231.81l-3.76 2.164 3.76 2.164 3.758-2.164L5.231.81zm1.956 13.505l2.182-1.256V3.624l-1.58.909-2.182 1.256v9.435l1.58-.909zM18.769 3.364l-3.76 2.164 3.76 2.163 3.759-2.164-3.759-2.163zm-.376 4.979l-2.182-1.256-1.579-.908v4.283l2.182 1.256 1.579.908V8.343zm-8.65 9.654l5.514-3.148 2.756-1.572-3.757-2.163-4.324 2.489-3.941 2.27 3.752 2.124z" />
+                  </svg>
+                </div>
+                Laravel
+              </div>
+              <span className="block mx-2">•</span>
+              Last deploy 1d ago
+              <span className="block mx-2">•</span>
+              United States
+            </div>
+          </div>
+        </div>
+        <div className="flex flex-col border-b border-gray-200 p-4 lg:p-5">
+          <div className="flex flex-col lg:flex-row lg:items-center">
+            <div className="flex items-center flex-1">
+              <div className="w-6 flex pl-1">
+                <span className="block w-2 h-2 bg-gray-400 shadow-outline-gray rounded-full" />
+              </div>
+              <h3 className="text-sm font-medium">
+                Heroicons
+              </h3>
+            </div>
+            <div className="flex items-center space-x-4">
+              <button className="font-medium text-xs" type="button">
+                Visit site
+              </button>
+              <button className="text-gray-300 focus:outline-none" type="button">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" className="w-3 h-auto fill-current" fill="currentColor">
+                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div className="pt-2 text-xs flex items-center text-gray-500">
+            <div className="flex items-center flex-1 space-x-1">
+              <div className="mr-1 text-gray-400">
+                <svg className="w-4 h-auto fill-current" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
+                </svg>
+              </div>
+              <div>
+                debbielewis/heroicons
+              </div>
+            </div>
+            <div className="flex items-center">
+              <div className="flex items-center">
+                <div className="text-gray-400 mr-2">
+                  <svg className="w-4 h-auto fill-current" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M23.644 5.43c.009.032.014.065.014.099v5.15c0 .135-.073.26-.189.326l-4.323 2.49v4.934c0 .135-.072.258-.188.326L9.931 23.95c-.021.012-.043.02-.066.027-.008.002-.016.008-.024.01-.063.018-.13.018-.192 0-.011-.002-.02-.008-.029-.012-.021-.008-.043-.014-.063-.025L.534 18.755c-.117-.068-.189-.191-.189-.326V2.974c0-.033.005-.066.014-.098.003-.012.01-.021.014-.032.006-.02.014-.04.023-.058.004-.013.015-.022.023-.033.012-.016.021-.031.033-.045.012-.01.025-.018.037-.027.014-.012.027-.024.041-.034h.001L5.044.05c.115-.067.259-.067.375 0l4.512 2.597h.002c.015.01.027.021.041.033.012.009.025.018.037.027.013.014.021.029.033.045.008.011.02.021.025.033.011.019.017.038.024.058.003.011.011.021.013.032.01.031.014.064.014.098v9.652l3.76-2.164V5.527c0-.033.005-.066.014-.098.003-.011.009-.021.013-.032.007-.02.014-.039.024-.059.007-.012.018-.021.025-.033.012-.015.021-.03.033-.043.012-.012.025-.02.037-.028.014-.011.026-.023.041-.032h.001l4.513-2.598c.116-.067.259-.067.375 0l4.513 2.598c.016.01.027.021.042.031.012.01.025.018.036.028.013.014.022.029.034.044.008.012.019.021.024.033.011.02.018.039.024.059.006.011.012.022.015.033zm-.74 5.032V6.179l-1.578.908-2.182 1.256v4.283l3.76-2.164zm-4.511 7.75v-4.287l-2.146 1.225-6.127 3.498v4.326l8.273-4.762zM1.095 3.624v14.588l8.273 4.762v-4.326l-4.322-2.445-.002-.003h-.002c-.014-.01-.025-.021-.04-.031-.011-.01-.024-.018-.035-.027l-.001-.002c-.013-.012-.021-.025-.031-.039-.01-.012-.021-.023-.028-.037h-.002c-.008-.014-.013-.031-.02-.047-.006-.016-.014-.027-.018-.043-.004-.018-.006-.037-.008-.057-.002-.014-.006-.027-.006-.041V5.789l-2.18-1.257-1.578-.908zM5.231.81l-3.76 2.164 3.76 2.164 3.758-2.164L5.231.81zm1.956 13.505l2.182-1.256V3.624l-1.58.909-2.182 1.256v9.435l1.58-.909zM18.769 3.364l-3.76 2.164 3.76 2.163 3.759-2.164-3.759-2.163zm-.376 4.979l-2.182-1.256-1.579-.908v4.283l2.182 1.256 1.579.908V8.343zm-8.65 9.654l5.514-3.148 2.756-1.572-3.757-2.163-4.324 2.489-3.941 2.27 3.752 2.124z" />
+                  </svg>
+                </div>
+                Laravel
+              </div>
+              <span className="block mx-2">•</span>
+              Last deploy 1d ago
+              <span className="block mx-2">•</span>
+              United States
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div className="bg-gray-50 lg:w-2/6">
+      <div className="py-6 pl-8 pr-4 lg:pr-10">
+        <h3 className="text-base font-medium">
+          Activity feed
+        </h3>
+        <div className="flex flex-col pt-6 space-y-6">
+          <div className="flex items-start">
+            <div className="mr-2">
+              <div className="w-6 h-6 rounded-full bg-gray-200" /> 
+            </div>
+            <div className="flex flex-col flex-1">
+              <div className="flex flex-row pb-1">
+                <div className="flex-1">
+                  <h4 className="font-medium text-sm">
+                    You
+                  </h4>
+                </div>
+                <div className="text-gray-500">
+                  <span className="text-xs">
+                    3h
+                  </span>
+                </div>
+              </div>
+              <div className="text-xs text-gray-500">
+                Deployed workcation (27c83j in master) to production
+              </div>
+            </div>
+          </div>
+          <div className="flex items-start">
+            <div className="mr-2">
+              <div className="w-6 h-6 rounded-full bg-gray-200" /> 
+            </div>
+            <div className="flex flex-col flex-1">
+              <div className="flex flex-row pb-1">
+                <div className="flex-1">
+                  <h4 className="font-medium text-sm">
+                    Tania Pena
+                  </h4>
+                </div>
+                <div className="text-gray-500">
+                  <span className="text-xs">
+                    5h
+                  </span>
+                </div>
+              </div>
+              <div className="text-xs text-gray-500">
+                Deleted project Kiketail
+              </div>
+            </div>
+          </div>
+          <div className="flex items-start">
+            <div className="mr-2">
+              <div className="w-6 h-6 rounded-full bg-gray-200" /> 
+            </div>
+            <div className="flex flex-col flex-1">
+              <div className="flex flex-row pb-1">
+                <div className="flex-1">
+                  <h4 className="font-medium text-sm">
+                    Guy Webb
+                  </h4>
+                </div>
+                <div className="text-gray-500">
+                  <span className="text-xs">
+                    12h
+                  </span>
+                </div>
+              </div>
+              <div className="text-xs text-gray-500">
+                Deployed workcation (27c83j in master) to production
+              </div>
+            </div>
+          </div>
+          <div className="flex items-start">
+            <div className="mr-2">
+              <div className="w-6 h-6 rounded-full bg-gray-200" /> 
+            </div>
+            <div className="flex flex-col flex-1">
+              <div className="flex flex-row pb-1">
+                <div className="flex-1">
+                  <h4 className="font-medium text-sm">
+                    Steve Schoger
+                  </h4>
+                </div>
+                <div className="text-gray-500">
+                  <span className="text-xs">
+                    1d
+                  </span>
+                </div>
+              </div>
+              <div className="text-xs text-gray-500">
+                Deployed workcation (27c83j in master) to production
+              </div>
+            </div>
+          </div>
+          <div className="flex items-start">
+            <div className="mr-2">
+              <div className="w-6 h-6 rounded-full bg-gray-200" /> 
+            </div>
+            <div className="flex flex-col flex-1">
+              <div className="flex flex-row pb-1">
+                <div className="flex-1">
+                  <h4 className="font-medium text-sm">
+                    Adam Watham
+                  </h4>
+                </div>
+                <div className="text-gray-500">
+                  <span className="text-xs">
+                    4d
+                  </span>
+                </div>
+              </div>
+              <div className="text-xs text-gray-500">
+                Deployed workcation (27c83j in master) to production
+              </div>
+            </div>
+          </div>
+          <div className="flex items-start">
+            <div className="mr-2">
+              <div className="w-6 h-6 rounded-full bg-gray-200" /> 
+            </div>
+            <div className="flex flex-col flex-1">
+              <div className="flex flex-row pb-1">
+                <div className="flex-1">
+                  <h4 className="font-medium text-sm">
+                    Randall Fisher
+                  </h4>
+                </div>
+                <div className="text-gray-500">
+                  <span className="text-xs">
+                    6d
+                  </span>
+                </div>
+              </div>
+              <div className="text-xs text-gray-500">
+                Deployed workcation (27c83j in master) to production
+              </div>
+            </div>
+          </div>
+        </div>
+        <div className="flex items-center pt-6">
+          <button className="text-indigo-500 font-medium text-sm inline-flex items-center" type="button">
+            View all activity
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" className="w-5 h-auto fill-current" fill="currentColor">
+              <path fillRule="evenodd" d="M8.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L10.793 8 8.146 5.354a.5.5 0 010-.708z" />
+              <path fillRule="evenodd" d="M4 8a.5.5 0 01.5-.5H11a.5.5 0 010 1H4.5A.5.5 0 014 8z" />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
